src/test/resources/query/error/queryWithOrderByNonIndexedColumn/schema.graphqls
type Query {
  films(releaseYear: String! @field(name : "RELEASE_YEAR"), orderBy: FilmOrder @orderBy): [Film!]!
}

type Film implements Node @table {
  id: ID!
  title: String!
}

input FilmOrder {
  direction: OrderDirection!
  orderByField: FilmOrderByField!
}

enum FilmOrderByField {
  LANGUAGE @index(name : "IDX_FK_LANGUAGE_ID")
  TITLE @index(name : "IDX_TITLE")
  RELEASE_YEAR @index(name : "NON_EXISTANT_INDEX")
}